Fix pages scroller with scrollbars

--- a/indigo_app/static/stylesheets/app.scss
+++ b/indigo_app/static/stylesheets/app.scss
@@ -514,10 +514,11 @@ legend {
   .pages {
     display: none;
     width: 100%;
-    height: 562px;
+    height: 570px;
 
     position: relative;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     padding: 5px;
     background: $grey-lighter;
 
